Enhance index.html with risk sections
Added sections on environmental and social risks, including details on pollution sanctions and wage discrimination.

--- a/site/index.html
+++ b/site/index.html
@@ -253,7 +253,20 @@ style="
       En avril 2025, plusieurs grandes entreprises ont été affectées par une attaque de ransomware, mettant
       hors ligne leurs systèmes pendant près de 7 semaines, avec des pertes évaluées à plus de 300 millions £. 
       <a href="https://www.theguardian.com/business/2025/jul/08/m-and-s-boss-cyber-attacks-archie-norman" target="_blank">Source presse</a>. 
+<p>
+      <strong>🌍 Risque environnemental – Pollution & sanctions :</strong>
+      En 2015, un grand constructeur automobile a manipulé des tests d’émissions polluantes, entraînant
+      des <strong>amendes de plusieurs milliards de dollars</strong>, des rappels massifs et une perte de crédibilité.
+      <a href="https://www.theguardian.com/business/2017/jun/06/volkswagen-diesel-emissions-scandal-settlement-us" target="_blank">Voir l’article</a>.
+    </p>
 
+    <p>
+      <strong>⚖️ Risque social – Discrimination salariale :</strong>
+      Un leader technologique a accepté de payer <strong>2,5 millions de dollars</strong> pour régler une plainte de
+      discrimination salariale fondée sur le genre, illustrant les risques sociaux quand les politiques internes ne
+      respectent pas les standards légaux.
+      <a href="https://www.eeoc.gov/newsroom/google-pay-25-million-settle-equal-pay-lawsuit" target="_blank">Voir l’article</a>.
+    </p>
     <p>
       <strong>Ransomware et services publics :</strong>
       Une attaque contre un fournisseur de systèmes IT en Suède a perturbé des services municipaux pour
