--- a/site/synthese.html
+++ b/site/synthese.html
@@ -248,7 +248,7 @@ footer {
 <p>Envoyez vos résultats à notre équipe pour un retour personnalisé.</p>
 <button onclick="sendReport()">📨 Envoyer ma scorecard</button>
 
-<a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3I7vzOldRpspNfyC0kwY4SBBtwZl8q1VCuUtwLBdXZ0xKrWZr3uR1_TcBvJzIDbwHh5vjmy1wh"
+<a href="https://calendar.app.google/fUbMYa7FWb5Yvx6e6"
    target="_blank" rel="noopener"
    class="calendar-btn">
 📅 Réserver un entretien gratuit (30 min)
@@ -310,7 +310,7 @@ Voici ma scorecard Master Your Metrics :
 ${interpretation}
 
 📅 Prendre rendez-vous :
-https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3I7vzOldRpspNfyC0kwY4SBBtwZl8q1VCuUtwLBdXZ0xKrWZr3uR1_TcBvJzIDbwHh5vjmy1wh
+https://calendar.app.google/fUbMYa7FWb5Yvx6e6
 
 — Envoyé via Master Your Metrics
 `.trim();
@@ -350,6 +350,7 @@ document.getElementById("generalScore").innerHTML =
 
 </body>
 </html>
+
 
 
 
