--- a/site/index.html
+++ b/site/index.html
@@ -219,7 +219,7 @@ style="
 
     </div>
 
-    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3I7vzOldRpspNfyC0kwY4SBBtwZl8q1VCuUtwLBdXZ0xKrWZr3uR1_TcBvJzIDbwHh5vjmy1wh"
+    <a href="https://calendar.app.google/TWzExGsSew5rCkN77"
        target="_blank"
        rel="noopener"
        style="
