Refactor AML diagnostic HTML structure and styles

--- a/site/diagnostics/aml.html
+++ b/site/diagnostics/aml.html
@@ -125,7 +125,7 @@ footer {
 
 </div>
 <div id="nextStepTimer" style="display:none; margin-top:20px; font-size:0.95em; color:#555;">
-  Passage au diagnostic suivant (<strong>AML</strong>) dans <strong><span id="countdown">4</span>s</strong>…
+  Passage au diagnostic suivant (<strong>Digital</strong>) dans <strong><span id="countdown">4</span>s</strong>…
 </div>
 
 <footer>
@@ -296,6 +296,7 @@ loadQuestion();
 
 </body>
 </html>
+
 
 
 
