--- a/site/diagnostics/digital.html
+++ b/site/diagnostics/digital.html
@@ -124,6 +124,9 @@ footer {
 <div id="result"></div>
 
 </div>
+<div id="nextStepTimer" style="display:none; margin-top:20px; font-size:0.95em; color:#555;">
+  Passage au diagnostic suivant (<strong>Crédit</strong>) dans <strong><span id="countdown">4</span>s</strong>…
+</div>
 
 <footer>
 <a href="../index.html" style="display:inline-block;margin-top:20px;padding:12px 24px;background:#00b894;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">← Retour à l'accueil</a>
@@ -267,10 +270,24 @@ function showResult() {
       <br><strong>— Nathalie D., Gérante de PME</strong>
     </div>
   `;
+  const timerEl = document.getElementById("nextStepTimer");
+  const countdownEl = document.getElementById("countdown");
 
-  setTimeout(() => {
-    window.location.href = "credit.html";
-  }, 4000);
+  timerEl.style.display = "block";
+
+  let timeLeft = 4;
+  countdownEl.innerText = timeLeft;
+
+  const interval = setInterval(() => {
+    timeLeft--;
+    countdownEl.innerText = timeLeft;
+
+    if (timeLeft <= 0) {
+      clearInterval(interval);
+      window.location.href = "credit.html";
+    }
+  }, 1000);
+
 }
 
 loadQuestion();
@@ -278,6 +295,7 @@ loadQuestion();
 
 </body>
 </html>
+
 
 
 
