Fix HTML encoding issues in cybersecurite.html

--- a/site/diagnostics/cybersecurite.html
+++ b/site/diagnostics/cybersecurite.html
@@ -285,7 +285,7 @@ function showResult() {
 
     if (timeLeft <= 0) {
       clearInterval(interval);
-      window.location.href = "synthese.html";
+      window.location.href = "https://master-metrics.vercel.app/synthese.html";
     }
   }, 1000);
 
@@ -296,6 +296,7 @@ loadQuestion();
 
 </body>
 </html>
+
 
 
 
