Refactor ESG diagnostic page styles and layout
Updated the styles and structure of the ESG diagnostic page, including changes to the progress bar and button colors.

--- a/site/diagnostics/esg.html
+++ b/site/diagnostics/esg.html
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-  background-color: #2c3e50;
+  background-color: #0b1c2d;
   color: white;
   padding: 40px 20px;
   text-align: center;
@@ -44,7 +44,7 @@ main {
 .progress-bar {
   height: 100%;
   width: 0%;
-  background: linear-gradient(90deg, #27ae60, #2ecc71);
+  background: linear-gradient(90deg, #6c5ce7, #00cec9);
   transition: width 0.4s ease;
 }
 
@@ -74,14 +74,14 @@ main {
 }
 
 .choice:hover {
-  background: #eafaf1;
-  border-color: #27ae60;
+  background: #f0efff;
+  border-color: #6c5ce7;
 }
 
 .choice.selected {
-  background: #27ae60;
+  background: #6c5ce7;
   color: white;
-  border-color: #27ae60;
+  border-color: #6c5ce7;
 }
 
 #result {
@@ -91,7 +91,7 @@ main {
 .temoignage {
   background: #fff;
   padding: 20px;
-  border-left: 4px solid #27ae60;
+  border-left: 4px solid #6c5ce7;
   margin-top: 25px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   font-style: italic;
@@ -102,6 +102,7 @@ footer {
   margin-top: 30px;
 }
 </style>
+</head>
 </head>
 
 <body>
@@ -296,4 +297,5 @@ loadQuestion();
 
 </body>
 </html>
+
 
