Refactor digital diagnostics HTML and CSS
Updated styles and improved layout for better visual appeal. Adjusted progress bar colors and added new questions to the digital diagnostics quiz.

--- a/site/diagnostics/digital.html
+++ b/site/diagnostics/digital.html
@@ -8,12 +8,12 @@
 <style>
 body {
   font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #f4f6f8, #e9eef3);
+  background: linear-gradient(135deg, #f4f6f8, #eef2f6);
   margin: 0;
 }
 
 header {
-  background-color: #001f3f;
+  background-color: #0b1c2d;
   color: white;
   padding: 40px 20px;
   text-align: center;
@@ -44,7 +44,7 @@ main {
 .progress-bar {
   height: 100%;
   width: 0%;
-  background: linear-gradient(90deg, #00b894, #00cec9);
+  background: linear-gradient(90deg, #6c5ce7, #00cec9);
   transition: width 0.4s ease;
 }
 
@@ -74,14 +74,14 @@ main {
 }
 
 .choice:hover {
-  background: #e8f8f5;
-  border-color: #00b894;
+  background: #f0efff;
+  border-color: #6c5ce7;
 }
 
 .choice.selected {
-  background: #00b894;
+  background: #6c5ce7;
   color: white;
-  border-color: #00b894;
+  border-color: #6c5ce7;
 }
 
 #result {
@@ -91,7 +91,7 @@ main {
 .temoignage {
   background: #fff;
   padding: 20px;
-  border-left: 4px solid #00b894;
+  border-left: 4px solid #6c5ce7;
   margin-top: 25px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   font-style: italic;
@@ -102,6 +102,7 @@ footer {
   margin-top: 30px;
 }
 </style>
+</head>
 </head>
 
 <body>
@@ -295,6 +296,7 @@ loadQuestion();
 
 </body>
 </html>
+
 
 
 
