--- a/site/diagnostics/aml.html
+++ b/site/diagnostics/aml.html
@@ -4,16 +4,15 @@
 <meta charset="UTF-8">
 <title>Diagnostic AML – Master Your Metrics</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
 body {
   font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #f4f6f8, #e9eef3);
+  background: linear-gradient(135deg, #f4f6f8, #eef2f6);
   margin: 0;
 }
 
 header {
-  background-color: #001f3f;
+  background-color: #0b1c2d;
   color: white;
   padding: 40px 20px;
   text-align: center;
@@ -44,7 +43,7 @@ main {
 .progress-bar {
   height: 100%;
   width: 0%;
-  background: linear-gradient(90deg, #0074D9, #00b4ff);
+  background: linear-gradient(90deg, #6c5ce7, #00cec9);
   transition: width 0.4s ease;
 }
 
@@ -74,14 +73,14 @@ main {
 }
 
 .choice:hover {
-  background: #eef6ff;
-  border-color: #0074D9;
+  background: #f0efff;
+  border-color: #6c5ce7;
 }
 
 .choice.selected {
-  background: #0074D9;
+  background: #6c5ce7;
   color: white;
-  border-color: #0074D9;
+  border-color: #6c5ce7;
 }
 
 #result {
@@ -91,7 +90,7 @@ main {
 .temoignage {
   background: #fff;
   padding: 20px;
-  border-left: 4px solid #0074D9;
+  border-left: 4px solid #6c5ce7;
   margin-top: 25px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   font-style: italic;
@@ -296,6 +295,7 @@ loadQuestion();
 
 </body>
 </html>
+
 
 
 
