Revise about section content for clarity and impact
Updated the text in the about section to reflect new messaging and regulatory context.

--- a/site/index.html
+++ b/site/index.html
@@ -128,8 +128,9 @@
       <img src="MMimage.JPG" alt="Photo professionnelle de l'équipe" style="max-width: 300px; border-radius: 10px;">
     </div>
     <div class="about-text">
-      <p>Master Your Metrics est une solution développée par des professionnels de la finance, de la conformité et du digital pour répondre aux besoins des indépendants, PME et experts du chiffre.</p>
-      <p>Nous croyons que chaque entreprise mérite un accompagnement stratégique, simple et impactant. Grâce à nos diagnostics en ligne, nos analyses ciblées et notre accompagnement opérationnel, nous vous aidons à renforcer vos fondamentaux : durabilité, conformité et efficacité digitale.</p>
+      <p>Master Your Metrics est une solution conçue par des experts de la finance, de la conformité et du digital pour aider les indépendants, PME et professionnels du chiffre à piloter leur activité avec clarté et anticipation.</p>
+      <p>À l’approche de 2026, les exigences réglementaires, les attentes des partenaires et la pression sur la performance s’intensifient. Nous sommes convaincus qu’un pilotage efficace commence par une vision objective de sa situation réelle.</p>
+       <p>Grâce à nos diagnostics en ligne, nos analyses ciblées et notre accompagnement opérationnel, nous vous aidons à structurer et renforcer vos fondamentaux clés : durabilité (ESG), conformité (AML/KYC) et efficacité digitale, afin de prendre les bonnes décisions, au bon moment.</p>
     </div>
   </div>
 </section>
