--- a/site/index.html
+++ b/site/index.html
@@ -255,10 +255,10 @@ style="
       hors ligne leurs systèmes pendant près de 7 semaines, avec des pertes évaluées à plus de 300 millions £. 
       <a href="https://www.theguardian.com/business/2025/jul/08/m-and-s-boss-cyber-attacks-archie-norman" target="_blank">Voir l’article</a>. 
 <p>
-      <strong>🌍 Risque environnemental – Pollution & sanctions :</strong>
-      En 2015, un grand constructeur automobile a manipulé des tests d’émissions polluantes, entraînant
-      des <strong>amendes de plusieurs milliards de dollars</strong>, des rappels massifs et une perte de crédibilité.
-      <a href="https://www.theguardian.com/business/2017/jun/06/volkswagen-diesel-emissions-scandal-settlement-us" target="_blank">Voir l’article</a>.
+      <strong>🌍 Le saviez-vous ?
+Un seul manquement environnemental peut coûter des milliards, bien au-delà des amendes.
+Le Dieselgate (Volkswagen) a montré qu’un défaut de conformité ESG peut impacter la valeur de l’entreprise, l’accès au financement et la confiance des partenaires pendant des années.</strong>, des rappels massifs et une perte de crédibilité.
+      <a href="https://www.bbc.com/news/business-34324772" target="_blank">Voir l’article</a>.
     </p>
 
     <p>
